# kids.file

./: .coveragerc  .package  .travis.yml  LICENSE  MANIFEST.in  README.rst  autogen.sh  setup.cfg  setup.py
src/kids/: __init__.py
src/kids/file/: __init__.py  chk.py  file.py  reader.py
