[metadata]
name = kids.file
version = 0.0.1
summary = Kids file management library
description-file =
    README.rst
    CHANGELOG.rst
requires-dist =
    minimock

## sdist info
author = Valentin LAB
author_email = valentin.lab@kalysto.org
home_page = http://github.com/0k/kids.file
classifier =
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers

[files]
packages-root = src
packages =
    kids
    kids.file
package-data = kids =
extra_files =
    README.rst
    CHANGELOG.rst
    setup.py

# [entry_points]
# console_scripts =
#     cmd1 = kids.file.example:run

[nosetests]
verbosity=3
with-doctest=1
doctest-extension=rst
exe=1
#doctest-options='+ELLIPSIS,+NORMALIZE_WHITESPACE'
